feature normalization and normal equation

--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -380,6 +380,146 @@
     "\n",
     "plt.plot(X[:,1], y_pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear regression with multiple variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Normalization\n",
+    "\n",
+    "When features differ by orders of magnitude, first performing feature scaling can make gradient descent converge\n",
+    "much more quickly.\n",
+    "\n",
+    "Steps:\n",
+    "1. Subtract the mean value of each feature from the dataset.\n",
+    "2. After subtracting the mean, additionally scale (divide) the feature values by their respective “standard deviations.”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(47, 3)"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data2 = genfromtxt('./data/ex1data2.txt', delimiter=',')\n",
+    "\n",
+    "X = data2[:, [0,1]]\n",
+    "y = data2[: , 2]\n",
+    "\n",
+    "m,n = data2.shape\n",
+    "\n",
+    "m,n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[2.104e+03, 3.000e+00],\n",
+       "        [1.600e+03, 3.000e+00],\n",
+       "        [2.400e+03, 3.000e+00],\n",
+       "        [1.416e+03, 2.000e+00],\n",
+       "        [3.000e+03, 4.000e+00],\n",
+       "        [1.985e+03, 4.000e+00],\n",
+       "        [1.534e+03, 3.000e+00],\n",
+       "        [1.427e+03, 3.000e+00],\n",
+       "        [1.380e+03, 3.000e+00],\n",
+       "        [1.494e+03, 3.000e+00]]),\n",
+       " array([399900., 329900., 369000., 232000., 539900., 299900., 314900.,\n",
+       "        198999., 212000., 242500.]))"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[:10], y[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean for each feature\n",
+    "\n",
+    "mu = X.mean(axis = 0)\n",
+    "\n",
+    "sigma = X.std(axis = 0)\n",
+    "\n",
+    "meanDiff = X - mu\n",
+    "\n",
+    "X_norm = meanDiff / sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "Normalize features\n",
+    "@returns normalized X, mean and std of each fature\n",
+    "'''\n",
+    "\n",
+    "def featureNormalize(X):\n",
+    "    mu = X.mean(axis = 0)\n",
+    "\n",
+    "    sigma = X.std(axis = 0)\n",
+    "\n",
+    "    meanDiff = X - mu\n",
+    "\n",
+    "    X_norm = meanDiff / sigma\n",
+    "    \n",
+    "    return X_norm, mu, sigma"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Normal Equation\n",
+    "\n",
+    "![Normal Equation](./images/normal%20eqn.png)\n",
+    "\n",
+    "Using this formula does not require any feature scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalEqn(X, y):\n",
+    "    return np.linalg.pinv(X.T.dot(X))"
+   ]
   }
  ],
  "metadata": {
