gradient not working

--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 186,
    "metadata": {},
@@ -80,7 +87,7 @@
     "using gradient descent.\n",
     "\n",
     "\n",
-    "![Cost Function](./images/linear%20regesstion%20-%20cost%20function.png)\n",
+    "![Cost Function](./images/linear%20regession%20-%20cost%20function.png)\n",
     "\n",
     "Recall that the parameters of your model are the θ j values. These are\n",
     "the values you will adjust to minimize cost J(θ).\n",
