Multi Class Classification using logistic regression

--- a/Multi Class Classification - Logistic Regression.ipynb
+++ b/Multi Class Classification - Logistic Regression.ipynb
@@ -371,18 +371,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(4405, 88.1)"
-      ]
-     },
-     "execution_count": 303,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 88.1%\n"
+     ]
     }
    ],
    "source": [
@@ -390,7 +387,7 @@
     "for i in range(len(y)):\n",
     "    if(y[i] == pred[i]):\n",
     "        c +=1\n",
-    "c, (c/len(y))*100"
+    "print(f'Accuracy: {(c/len(y))*100}%')"
    ]
   }
  ],
